--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.hao.learnself"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -15,7 +15,7 @@ android {
                 arguments = [MODULE_NAME: "this module name is " + project.getName()]
             }
         }
-        renderscriptTargetApi 18
+//        renderscriptTargetApi 18
         renderscriptSupportModeEnabled true
     }
     buildTypes {
