--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".date_2018_12_28.AnnotationTestActivity"/>
         <activity android:name=".date_2019_3_27.GaussianBlurActivity"/>
+        <activity android:name=".date_2019_7_26.LockScreenActivity"/>
     </application>
 
 </manifest>
