--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.hao.learnself">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +23,8 @@
         <activity android:name=".date_2018_12_28.AnnotationTestActivity"/>
         <activity android:name=".date_2019_3_27.GaussianBlurActivity"/>
         <activity android:name=".date_2019_7_26.LockScreenActivity"/>
+        <activity android:name=".date_2019_12_19.ASMTestActivity"/>
+        <activity android:name=".date_2019_12_20.HotfixTestActivity" />
     </application>
 
 </manifest>
