--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,9 @@ dependencies {
     annotationProcessor project(':compiler')
     implementation project(':annotation')
 }
-
-tinkerPatch {
-    oldApk = 'oldApk'
-    outputFolder = 'outputFolder'
-    newApk = 'newApk'
-}
+//
+//tinkerPatch {
+//    oldApk = 'oldApk'
+//    outputFolder = 'outputFolder'
+//    newApk = 'newApk'
+//}
