--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".date_2019_12_24.ActivityLifecycleTest" android:configChanges="orientation|screenSize"/>
         <activity android:name=".date_2019_12_24.StandardActivity"/>
         <activity android:name=".date_2019_12_24.TransparentActivity" android:theme="@android:style/Theme.Translucent"/>
+        <activity android:name=".date_19_12_25_22.AnimationTestActivity"/>
     </application>
 
 </manifest>
