--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -4,7 +4,9 @@ dependencies {
     implementation gradleApi()
     implementation localGroovy()
     implementation 'com.android.tools.build:gradle:3.5.3'
-    implementation 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+    implementation 'org.ow2.asm:asm:7.1'
+    implementation 'org.ow2.asm:asm-util:7.1'
+    implementation 'org.ow2.asm:asm-commons:7.1'
 }
 
 repositories {
